--- a/ui/ui.html
+++ b/ui/ui.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UI</title>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 <body>
     <label for="docid">Document ID:</label><br>
@@ -15,6 +16,26 @@
 
     </div>
 
-    <script type="module" src="ui.js"></script>
+    <script>
+        var quill = new Quill('#editor', {
+            theme: 'snow'
+        });
+
+        function openDoc() {
+            //let ydoc = new Y.Doc();
+            //let ytext = ydoc.getText('doc-contents');
+            //const binding = new QuillBinding(ytext, quill);
+            let url = "/api/connect/" + document.getElementById("docid").value;
+            const source = new EventSource(url);
+            source.addEventListener('sync', event => {
+                console.log("SYNC");
+                console.log(event);
+            });
+            source.addEventListener('update', event => {
+                console.log("UPDATE");
+                console.log(event);
+            });
+        }
+    </script>
 </body>
 </html>
