--- a/ui/ui.html
+++ b/ui/ui.html
@@ -15,6 +15,7 @@
     <div id="editor">
 
     </div>
+    <input type="button" value="POSTREQTEST" onclick="postReq()">
 
     <script>
         var quill = new Quill('#editor', {
@@ -35,6 +36,21 @@
                 console.log("UPDATE");
                 console.log(event.data);
             });
+        }
+
+        function postReq() {
+            var http = new XMLHttpRequest();
+            var url = '/api/op/' + document.getElementById("docid").value;
+            http.open('POST', url, true);
+            http.setRequestHeader('Content-Type', 'application/json');
+
+            http.onreadystatechange = function() {//Call a function when the state changes.
+                console.log(http.responseText);
+            }
+
+            let update = [{ "insert": "Hello" }];
+
+            http.send(update);
         }
     </script>
 </body>
