--- a/ui/login.html
+++ b/ui/login.html
@@ -28,5 +28,10 @@
     <label for="name">Password:</label><br>
     <input type="text" id="password" name="password"><br>
     <input type="button" value="Log In" onclick="logIn()">
+    <div>
+        <p>No account?
+            <a href="/users/signup">Sign Up</a>
+        </p>
+    </div>
 </body>
 </html>
