--- a/ui/signup.html
+++ b/ui/signup.html
@@ -31,5 +31,6 @@
     <label for="name">Password:</label><br>
     <input type="text" id="password" name="password"><br>
     <input type="button" value="Sign Up" onclick="signUp()">
+    <div><a href="/">Click here to go back to /</a></div>
 </body>
 </html>
