--- a/ui/login.html
+++ b/ui/login.html
@@ -19,6 +19,7 @@
                 body: JSON.stringify(user)
             });
             console.log(response.json());
+            location.reload();
         }
     </script>
 </head>
