fixed res.end stuff

--- a/ui/home.html
+++ b/ui/home.html
@@ -45,7 +45,7 @@
             let response = await fetch("/users/logout", {
                 method: 'POST',
             });
-            location.reload()
+            location.reload();
         }
 
         async function createDoc() {
